# affine

./: INSTALL  LICENSE  Makefile.in  README  TODO  bootstrap  configure.ac  dist
doc/: compiler.tex  diagram.eps  diagram.tex  fit.fig
examples/: Makefile.in  aadc.cpp  implicit-aadc.cpp  implicit-interval.cpp  pipestream.h
examples/doc/: aadc.1
examples/grapher/: Makefile  grapher.cpp  grapher.h  main.cpp
examples/imgraph/: TODO  gui.fig  gui.txt
examples/implicit-affine/: Makefile.in  evaluator.h  expr.cpp  expressions.h  implicit-affine.cpp  optimizer.cpp  optimizer.h  parser.cpp
include/: replace.h.in
include/affine/: affine.h  affine_inline.h  config.h.in  interval.h  interval_inline.h
libaffine/: Makefile.in  affine.cpp  devalloc.h  devlist.h  interval.cpp  palist.cpp  palist.h  util.h
tests/: Makefile.in  benchmark  powers.cpp  speed.cpp  stupid.cpp
